--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="date" id="input-birthday" name="input-birthday" class="input">
 
                 <div id="mensagem"></div>
-                <button id="botao-cadastrar" class="botao" onclick="cadastrar()">Cadastrar</button>
+                <button id="botao-cadastrar" class="botao" onclick="verificarInputs()">Cadastrar</button>
 
             </div>
         </div>
