--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
                 <label for="label-birthday">Data de Nascimento</label>
                 <input type="date" id="input-birthday" name="input-birthday" class="input">
 
-                <div id="mensagem"></div>
-                <button id="botao-cadastrar" class="botao" onclick="verificarInputs()">Cadastrar</button>
+                <div id="msg"></div>
+                <button id="botao-cadastrar" class="botao" onclick="envieMsg()">Cadastrar</button>
 
             </div>
         </div>
+    </div>
+
+    <div id="containerLista">
+
     </div>
 
 </body>
