functions criadas, biblioteca, html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="date" id="input-birthday" name="input-birthday" class="input">
 
                 <div id="msg"></div>
-                <button id="botao-cadastrar" class="botao" onclick="envieMsg()">Cadastrar</button>
+                <button id="botao-cadastrar" class="botao" onclick="cadastrarPets()">Cadastrar</button>
 
             </div>
         </div>
