--- a/index.html
+++ b/index.html
@@ -12,25 +12,24 @@
 <body>
     <div id="container">
         <h2 id="tituloprincipal">
-        Clínica Veterinária
+            Clínica Veterinária
         </h2>
 
-        <div id="labelcontainer">
+        <div id="stylecontainer">
             <div id="inputcontainer">
-
-                <label for="label-tutor">Tutor</label>
+                <label for="label-tutor" class="label">Tutor(a)</label>
                 <input type="text" id="input-tutor" name="input-tutor" class="input">
 
-                <label for="label-nome">Nome do Pet</label>
+                <label for="label-nome" class="label">Nome do Pet</label>
                 <input type="text" id="input-nome" name="input-nome" class="input">
 
-                <label for="label-especie">Espécie</label>
+                <label for="label-especie" class="label">Espécie</label>
                 <input type="text" id="input-especie" name="input-especie" class="input">
 
-                <label for="label-fotinha">Fotinha</label>
+                <label for="label-fotinha" class="label">Fotinha</label>
                 <input type="text" id="input-fotinha" name="input-fotinha" class="input">
 
-                <label for="label-birthday">Data de Nascimento</label>
+                <label for="label-birthday" class="label">Data de Nascimento</label>
                 <input type="date" id="input-birthday" name="input-birthday" class="input">
 
                 <div id="msg"></div>
